iteration2 - added first css, index.hbs and link to layout.hbs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,4 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div id="menu-container">
+    <h1>Cinema Ironhack</h1>
+    <button href="/movies">Check the movies!</button> 
+</div>
