--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,26 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 100px;
+  font: 95px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: white;
+  background: url(../images/cinema.jpg) no-repeat center center fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#menu-container {
+  padding-left:500px;
 }
 
-a {
-  color: #00B7FF;
+h1 {
+  font-size: 6rem;
+  color:white;
+  width: 300px;
+  text-align: left;
+}
+
+button {
+  color: rgb(18, 18, 103);
+  background-color: white;
+  padding: 10px 20px;
+  border-radius: 50px;
+  font-size: 2rem;
 }
