--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
 <div id="menu-container">
     <h1>Cinema Ironhack</h1>
-    <button href="/movies">Check the movies!</button> 
+    <a href="/movies">Check the movies!</a> 
 </div>
