--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,6 @@
-<div id="menu-container">
-    <h1>Cinema Ironhack</h1>
-    <a href="/movies">Check the movies!</a> 
-</div>
+<body id="home-bg">
+  <div id="menu-container">
+      <h1>Cinema Ironhack</h1>
+      <a href="/movies">Check the movies!</a> 
+  </div>
+</body>
