added moviePartial & updated /movies styles

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <body id="home-bg">
   <div id="menu-container">
       <h1>Cinema Ironhack</h1>
-      <a href="/movies">Check the movies!</a> 
+      <a id="home-button" href="/movies">Check the movies!</a> 
   </div>
 </body>
