--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,11 @@
+/* Font and General Elements */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
+/* HOME PAGE */
 body#home-bg {
   padding: 100px;
   font: 95px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -5,10 +13,6 @@ body#home-bg {
   background: url(../images/cinema.jpg) no-repeat center center fixed;
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-body#movies-bg {
-  background-color: red;
 }
 
 #menu-container {
@@ -22,11 +26,101 @@ h1 {
   text-align: left;
 }
 
-a {
+a#home-button {
   color: rgb(18, 18, 103);
   background-color: white;
   padding: 10px 20px;
   border-radius: 50px;
   font-size: 2rem;
   text-decoration: none;
+}
+
+
+/* MOVIES PAGE */
+body#movies-bg {
+  background-color: white;
+}
+
+#movies-main {
+  display: block;
+  text-align: center;
+}
+
+#movies-main h1 {
+  color: #000;
+  margin: auto;
+  width: max-content;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+/* MOVIES CARDS */
+.movie-card {
+  width: 75%;
+  position: relative;
+  max-width: 800px;
+  margin: auto;
+  background: #fff;
+  box-shadow: 0px 14px 80px rgb(34 35 58 / 20%);
+  padding: 22px;
+  border-radius: 25px;
+  height: 280px;
+  display: flex;
+  margin-top: 10px;
+}
+
+.movie-card:first-child {
+margin-top: 75px;
+}
+
+.movie-card:last-child {
+margin-bottom: 75px;
+}
+
+.movie-card > img {
+display: block;
+margin: 0px 25px;
+}
+
+.movie-card:hover {
+box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card-container-movie {
+margin-top: 15px;
+padding: 0px 40px;
+width: 15vw;
+display: flex;
+justify-content: center;
+}
+
+.card-container {
+padding: 0px 40px;
+width: 85vw;
+}
+
+.card-container > h2 {
+font-size: 30px;
+}
+
+.card-container > p {
+margin-top: 25px;
+}
+
+/* SEE MORE BUTTONS */
+#button-see-more {
+  display: block;
+}
+
+#button-see-more > a {
+  background: #20c3a9;
+  color: #fff;
+  padding: 15px 0px;
+  margin-top: 40px;
+  border-radius: 20px;
+  text-decoration: none;
+  display: flex;
+  width: 150px;
+  justify-content: center;
+  align-self: flex-end;
 }
