added back navigation

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,7 @@
 <body id="home-bg">
-  <div id="menu-container">
-      <h1>Cinema Ironhack</h1>
-      <a id="home-button" href="/movies">Check the movies!</a> 
-  </div>
+  <section class="menu-container">
+    <h1>Cinema Ironhack</h1>
+      <a id="home-button" href="/movies">Check the movies!</a>
+  </section>
 </body>
+
