--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,6 @@
 
 /* HOME PAGE */
 body#home-bg {
-  padding: 100px;
   font: 95px "Lucida Grande", Helvetica, Arial, sans-serif;
   color: white;
   background: url(../images/cinema.jpg) no-repeat center center fixed;
@@ -50,7 +49,7 @@ body#movies-bg {
   color: #000;
   margin: auto;
   width: max-content;
-  margin-top: 40px;
+  margin-top: 100px;
   margin-bottom: 40px;
 }
 
@@ -124,3 +123,24 @@ margin-top: 25px;
   justify-content: center;
   align-self: flex-end;
 }
+
+/* Back Navigation */
+
+header nav#nav-bar {
+  width: 100%;
+  height: 6.3vh;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;  
+  position: fixed;
+  border-bottom: 0.1px solid #7e7d7d;
+  top: 0;
+  z-index: 100;
+}
+
+header nav a {
+  font-size: 2vh;
+  text-decoration: none;
+  color: #1A1A1A;
+} 
