--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -1,4 +1,9 @@
 <body id="movies-bg">
+  <header>
+    <nav id="nav-bar">
+      <a href="/">← Go back to Home</a>
+    </nav>
+  </header>
   <div id="movies-main">
     <h1>Ironhack Cinema</h1>
     <p>Click on the movie to check the showtimes</p>
