--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <body id="home-bg">
-  <section class="menu-container">
+  <section id="menu-container">
     <h1>Cinema Ironhack</h1>
       <a id="home-button" href="/movies">Check the movies!</a>
   </section>
