--- a/views/partials/moviePartial.hbs
+++ b/views/partials/moviePartial.hbs
@@ -4,7 +4,7 @@
   </div>  
   <div class="card-container">
     <h2>{{title}}</h2>
-    <p>{{director}}</p>
+    <p>Director: {{director}}</p>
     <p>{{description}}</p>
     <div id="button-see-more">
       <a href="/movies/{{_id}}">See More</a>
