--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,7 +15,10 @@ body#home-bg {
 }
 
 #menu-container {
-  padding-left:500px;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  float: right;
 }
 
 h1 {
@@ -26,12 +29,14 @@ h1 {
 }
 
 a#home-button {
-  color: rgb(18, 18, 103);
-  background-color: white;
-  padding: 10px 20px;
+  color: #121267;
+  background-color: #fff;
+  margin-top: 45px;
+  padding: 5px 75px;
   border-radius: 50px;
   font-size: 2rem;
   text-decoration: none;
+  width: fit-content;
 }
 
 
@@ -85,7 +90,7 @@ margin-bottom: 75px;
   box-shadow: 0px 14px 80px rgb(34 35 58 / 20%);
   padding: 22px;
   border-radius: 25px;
-  height: 680px;
+  height: 400px;
   display: flex;
   margin-top: 10px;
 }
@@ -126,6 +131,7 @@ font-size: 30px;
 
 .card-container > p {
 margin-top: 25px;
+font-size: 16px;
 }
 
 /* SEE MORE BUTTONS */
