--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,17 +8,16 @@
 /* HOME PAGE */
 body#home-bg {
   font: 95px "Lucida Grande", Helvetica, Arial, sans-serif;
-  color: white;
-  background: url(../images/cinema.jpg) no-repeat center center fixed;
-  background-repeat: no-repeat;
+  background: url(../images/cinema.jpg) fixed;
   background-size: cover;
 }
 
 #menu-container {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 40%;
   float: right;
+  margin-top: 115px;
 }
 
 h1 {
